# text-2-sql

./: README.md  pyproject.toml
app/: server.py
app/chains/: text_to_sql_chain.py
app/handler/: text_to_sql_handler.py
myenv/: pyvenv.cfg
myenv/Scripts/: activate  activate.bat  jsondiff  jsonpatch  jsonpointer
